--- a/GormRevolution.ini
+++ b/GormRevolution.ini
@@ -38,7 +38,7 @@ AllowPublicMaps = 1
 ImageFile = 0
 
 ; Name of Mod
-Name = GormRevolutin
+Name = GormRevolution
 
 ; Description of Mod
 Description = Generic Mod
